clusters/homelab/apps/jellystat/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jellystat
spec:
  ports:
    - name: http
      port: 80
      targetPort: 3000
  selector:
    app: jellystat
